--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "escapadetechnologies.com.retrofitgitexample"
+        applicationId "Example.com.retrofitgitexample"
         minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
